Making many requireed changes , css and links improvement , better user experience

--- a/LOGIN/LogIn.css
+++ b/LOGIN/LogIn.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  background: #f3f2f2;
+  background: #dfd0e2;
 }
 
 h4 {
